--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -37,4 +37,5 @@
   grid-gap: 25px;
   width: var(--max-width);
   max-width: 100%;
+  margin: auto;
 }
